--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
   ],
   "repository": "git@github.com:benkroeger/passport-oidc.git",
   "devDependencies": {
-    "express": "4.13.3",
-    "gulp": "^3.6.0",
-    "gulp-coveralls": "^0.1.0",
-    "gulp-eslint": "^1.0.0",
+    "eslint": "^2.4.0",
+    "eslint-config-oniyi": "^2.0.1",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-eslint": "^2.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-istanbul": "^0.9.0",
-    "gulp-mocha": "^2.0.0",
-    "gulp-nsp": "^2.1.0",
-    "gulp-plumber": "^1.0.0"
+    "gulp-istanbul": "^0.10.3",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nsp": "^2.3.1",
+    "gulp-plumber": "^1.1.0"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
@@ -36,6 +38,6 @@
   "license": "MIT",
   "dependencies": {
     "oauth": "0.9.14",
-    "passport": "0.3.0"
+    "passport": "0.3.2"
   }
 }
